// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`voiceBalance renders 0 1`] = `
Array [
  .c0 {
  voice-balance: 0;
}

<div
    className="c0"
  />,
  .c0 {
  voice-balance: 0;
}

<div
    className="c0"
  />,
  .c0 {
  voice-balance: 0;
}

<div
    className="c0"
  />,
  .c0 {
  voice-balance: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`voiceBalance renders function 1`] = `
Array [
  .c0 {
  voice-balance: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  voice-balance: has;
}

<div
    className="c0"
  />,
  .c0 {
  voice-balance: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  voice-balance: has;
}

<div
    className="c0"
  />,
]
`;

exports[`voiceBalance renders invalid theme path 1`] = `
Array [
  .c0 {
  voice-balance: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  voice-balance: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  voice-balance: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  voice-balance: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`voiceBalance renders negative number 1`] = `
Array [
  .c0 {
  voice-balance: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  voice-balance: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  voice-balance: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  voice-balance: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`voiceBalance renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  voice-balance: July;
}

@media screen and (min-width:November) {
  .c0 {
    voice-balance: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-balance: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-balance: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-balance: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  voice-balance: July;
}

@media screen and (min-width:November) {
  .c0 {
    voice-balance: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-balance: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-balance: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-balance: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  voice-balance: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    voice-balance: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-balance: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-balance: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-balance: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  voice-balance: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    voice-balance: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-balance: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-balance: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-balance: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`voiceBalance renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    voice-balance: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-balance: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-balance: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-balance: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    voice-balance: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-balance: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-balance: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-balance: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    voice-balance: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-balance: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-balance: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-balance: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    voice-balance: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-balance: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-balance: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-balance: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`voiceBalance renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  voice-balance: July;
}

@media May {
  .c0 {
    voice-balance: August;
  }
}

@media April {
  .c0 {
    voice-balance: September;
  }
}

@media January {
  .c0 {
    voice-balance: November;
  }
}

@media April {
  .c0 {
    voice-balance: August;
  }
}

@media June {
  .c0 {
    voice-balance: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  voice-balance: July;
}

@media May {
  .c0 {
    voice-balance: August;
  }
}

@media April {
  .c0 {
    voice-balance: September;
  }
}

@media January {
  .c0 {
    voice-balance: November;
  }
}

@media April {
  .c0 {
    voice-balance: August;
  }
}

@media June {
  .c0 {
    voice-balance: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  voice-balance: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    voice-balance: November;
  }
}

@media April {
  .c0 {
    voice-balance: January;
  }
}

@media January {
  .c0 {
    voice-balance: December;
  }
}

@media April {
  .c0 {
    voice-balance: April;
  }
}

@media June {
  .c0 {
    voice-balance: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  voice-balance: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    voice-balance: November;
  }
}

@media April {
  .c0 {
    voice-balance: January;
  }
}

@media January {
  .c0 {
    voice-balance: December;
  }
}

@media April {
  .c0 {
    voice-balance: April;
  }
}

@media June {
  .c0 {
    voice-balance: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`voiceBalance renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    voice-balance: July;
  }
}

@media April {
  .c0 {
    voice-balance: August;
  }
}

@media January {
  .c0 {
    voice-balance: September;
  }
}

@media April {
  .c0 {
    voice-balance: November;
  }
}

@media June {
  .c0 {
    voice-balance: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    voice-balance: July;
  }
}

@media April {
  .c0 {
    voice-balance: August;
  }
}

@media January {
  .c0 {
    voice-balance: September;
  }
}

@media April {
  .c0 {
    voice-balance: November;
  }
}

@media June {
  .c0 {
    voice-balance: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    voice-balance: January;
  }
}

@media April {
  .c0 {
    voice-balance: December;
  }
}

@media January {
  .c0 {
    voice-balance: April;
  }
}

@media April {
  .c0 {
    voice-balance: May;
  }
}

@media June {
  .c0 {
    voice-balance: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    voice-balance: January;
  }
}

@media April {
  .c0 {
    voice-balance: December;
  }
}

@media January {
  .c0 {
    voice-balance: April;
  }
}

@media April {
  .c0 {
    voice-balance: May;
  }
}

@media June {
  .c0 {
    voice-balance: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`voiceBalance renders postitive number 1`] = `
Array [
  .c0 {
  voice-balance: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  voice-balance: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  voice-balance: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  voice-balance: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`voiceBalance renders string 1`] = `
Array [
  .c0 {
  voice-balance: July;
}

<div
    className="c0"
  />,
  .c0 {
  voice-balance: July;
}

<div
    className="c0"
  />,
  .c0 {
  voice-balance: June;
}

<div
    className="c0"
  />,
  .c0 {
  voice-balance: June;
}

<div
    className="c0"
  />,
]
`;

exports[`voiceBalance renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`voiceBalance renders valid theme path 1`] = `
Array [
  .c0 {
  voice-balance: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  voice-balance: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  voice-balance: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  voice-balance: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
